# haoxue-dict

./: Cargo.toml  README.md
.github/workflows/: test.yml
data/: SUBTLEX-CH-WF.utf8.txt
src/: lib.rs
