[package]
name = "haoxue-dict"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Chinese dictionary and word segmenter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cedict = "0.3.1"
csv = "1.3.0"
either = "1.9.0"
prettify_pinyin = "2.0.0"
