[package]
name = "haoxue-dict"
version = "0.1.7"
edition = "2021"
license = "MIT"
description = "Chinese dictionary and word segmenter"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cedict = "0.3.1"
csv = "1.3.0"
either = "1.13.0"
itertools = "0.13.0"
once_cell = "1.19.0"
prettify_pinyin = "2.0.0"

[dev-dependencies]
prettify_pinyin = "2.0.0"

[features]
default = ["embed-dict"]
embed-dict = []
